ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - httpbin.example.com
    - trino.example.com
    tls:
      mode: SIMPLE
      credentialName: httpbin-credential
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - httpbin.example.com
    - trino.example.com
    tls:
      httpsRedirect: true # Redirect http traffic to https
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: httpbin
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - default/httpbin-gateway
#   http:
#   - match:
#     - uri:
#         prefix: /
#     route:
#     - destination:
#         port:
#           number: 8000
#         host: httpbin
#     headers:
#       request:
#         add:
#           x-forwarded-proto: "https"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: trino
  namespace: trino-system
spec:
  hosts:
  - trino.example.com
  gateways:
  - default/httpbin-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
      - destination: # destination rule
          port:
            number: 8080
          host: trino    # trino service
        headers:
          request:
            add:
              x-forwarded-proto: "https"
