trino-template.yaml
---
# Source: trino/templates/netpols.yaml
# TODO: I didn't move these into the Trino chart yet.
#       They should be added to the chart instead of
#       deployed directly.

# TODO: Make sure netpols are in place for Hive as well
#       (It's in a different namespace.)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: trino-system
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
# Source: trino/templates/netpols.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace
  namespace: trino-system
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  egress:
  - to:
    - podSelector: {}
  ingress:
  - from:
    - podSelector: {}
---
# Source: trino/templates/netpols.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: coordinator-ingress-allow
  namespace: trino-system
spec:
  podSelector:
    matchLabels:
      component: coordinator
  policyTypes:
    - Ingress
  ingress:
    - {}
---
# Source: trino/templates/netpols.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-hive-allow
  namespace: trino-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: hive-system
---
# Source: trino/templates/netpols.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-datasources-allow
  namespace: trino-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    # TODO: Replace this with CIDRs of StatCan networks.
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: postgresql-datasource
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: minio-system
---
# Source: trino/templates/netpols.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dns-allow
  namespace: trino-system
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
  podSelector: {}
  policyTypes:
    - Egress
---
# Source: trino/templates/netpols.yaml
# NOTE: This policy is not necessary in real cluster if:
#   * The namespace has any of the following labels:
#     * namespace.statcan.gc.ca/purpose: system
#     * namespace.statcan.gc.ca/purpose: daaas
#   * The pod has the following label:
#     * network.statcan.gc.ca/allow-kube-apiserver: true
#
# In these cases, the necessary network policy is generated by the
# namespace-controller.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kube-apiserver-allow
  namespace: trino-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.0.19/32
      ports:
        - port: 6443
          protocol: TCP
---
# Source: trino/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-trino
  labels:
    app: trino
    chart: trino-0.5.0
    release: release-name
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: trino
    release: release-name
    component: coordinator
---
# Source: trino/templates/deployment-coordinator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-trino-coordinator
  labels:
    app: trino
    chart: trino-0.5.0
    release: release-name
    heritage: Helm
    component: coordinator
spec:
  selector:
    matchLabels:
      app: trino
      release: release-name
      component: coordinator
  template:
    metadata:
      labels:
        app: trino
        release: release-name
        component: coordinator
    spec:
      serviceAccountName: default
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      volumes:
        - name: config-volume
          configMap:
            name: release-name-trino-coordinator
        - name: catalog-volume
          configMap:
            name: release-name-trino-catalog
        - name: nginx-conf
          configMap:
            name: nginx-conf
        - name: nginx-init
          configMap:
            name: nginx-init
            defaultMode: 0755
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: trino-coordinator
          image: "trinodb/trino:latest"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /etc/trino
              name: config-volume
            - mountPath: /etc/trino/catalog
              name: catalog-volume
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /v1/info
              port: http
          readinessProbe:
            httpGet:
              path: /v1/info
              port: http
          resources:
            {}
        - name: trino-jwks-client
          image: nginxinc/nginx-unprivileged:1.20-alpine
          securityContext:
            runAsUser: 101
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 8090
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf.tmpl
              subPath: nginx.conf.tmpl
              readOnly: true
            - name: nginx-init
              mountPath: /docker-entrypoint.d/envsubst-conf.sh
              subPath: envsubst-conf.sh
              readOnly: true
---
# Source: trino/templates/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-trino-worker
  labels:
    app: trino
    chart: trino-0.5.0
    release: release-name
    heritage: Helm
    component: worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trino
      release: release-name
      component: worker
  template:
    metadata:
      labels:
        app: trino
        release: release-name
        component: worker
    spec:
      serviceAccountName: default
      volumes:
        - name: config-volume
          configMap:
            name: release-name-trino-worker
        - name: catalog-volume
          configMap:
            name: release-name-trino-catalog
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: trino-worker
          image: "trinodb/trino:latest"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /etc/trino
              name: config-volume
            - mountPath: /etc/trino/catalog
              name: catalog-volume
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /v1/info
              port: http
          readinessProbe:
            httpGet:
              path: /v1/info
              port: http
          resources:
            {}
